# JacksAdapterPackage

./: MANIFEST.in  pyproject.toml
src/JacksAdapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/jacksAdapter/: adapter.py
test/config/: jacksAdapter.cfg
test/static/: index.html
test/static/js/: odin_server.js
